<resources>
    <string name="shr_app_name">SecondLife</string>

    <!--Placeholders-->
    <string name="username_placeholder">Username</string>
    <string name="password_placeholder">Password</string>

    <!--Component Titles-->
    <string name="logo_title">Logo</string>
    <string name="search_title">Search</string>
    <string name="filter_title">Filter</string>
    <string name="orders_title">Orders</string>
    <string name="please_enter_order_name">Please enter order name</string>

    <!--Buttons-->
    <string name="next_button">Next</string>
    <string name="cancel_button">Cancel</string>
    <string name="start_new_order">Start new order</string>

    <!--Errors-->
    <string name="not_null_error">This field are required</string>
    <string name="password_error">Password must contain at least 8 characters</string>
    <string name="incorrect_password_error">Incorrect password</string>
    <string name="username_not_fount_error">Doctor with such username not exists</string>
    <string name="order_name_placeholder">Order name</string>
    <string name="please_choose_disease_from_list">Please choose disease from list</string>
    <string name="order_name_already_exists">Order with such name already exists</string>
    <string name="disease_title">Disease</string>
    <string name="please_choose_disease_stage_from_list">Please choose disease stage from list</string>
    <string name="therapy_title">Therapy</string>
    <string name="please_choose_therapy_from_list">Please choose therapy from list</string>
    <string name="please_choose_test_recommendation_from_list">Please choose test recommendation from list</string>
    <string name="please_choose_lab_from_list">Please choose lab from list</string>
    <string name="please_complete_order_by_patient_info">Please complete order by patient info</string>
    <string name="day_of_birthday">Day of Birthday</string>
    <string name="gender">Gender</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="address">Address</string>
    <string name="submit_order">Submit Order</string>
    <string name="cancel">Cancel</string>
    <string name="order_didn_t_send_to_lab">Order didn\'t send to lab</string>
    <string name="resend_order">Resend Order</string>

    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
