<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vintsarevich.secondlife.activity.ChooseLabActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/hhubu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/lab_activity_toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/patient_info_text_view"
        android:layout_width="340dp"
        android:layout_height="93dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/please_complete_order_by_patient_info"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="449dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_info_text_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <DatePicker
                android:id="@+id/day_of_birthday_input"
                android:layout_width="320dp"
                android:layout_height="201dp"
                android:layout_gravity="center"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:spinnersShown="true"
                tools:layout_editor_absoluteX="80dp"
                tools:layout_editor_absoluteY="41dp" />

            <Spinner
                android:id="@+id/gender_input"
                android:layout_width="320dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:entries="@array/genders" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/first_name_text_input"
                style="@style/Widget.SecondLife.TextInputLayout"
                android:layout_width="320dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:hint="@string/first_name"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/first_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/second_name_text_input"
                style="@style/Widget.SecondLife.TextInputLayout"
                android:layout_width="320dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:hint="@string/second_name"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/second_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/address_text_input"
                style="@style/Widget.SecondLife.TextInputLayout"
                android:layout_width="320dp"
                android:layout_height="72dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:hint="@string/address"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/address_input"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.button.MaterialButton
                android:id="@+id/submit_order"
                style="@style/Widget.SecondLife.Button"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/submit_order" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>